Update ja-word2vec.md
Former-commit-id: b7dbedd5352c4b23f7232deb54a5a1fb38c46595